--- a/style/style.css
+++ b/style/style.css
@@ -37,4 +37,17 @@ body{
     /* background-color: #eee; */
     box-shadow: 2px 2px 15px #000;
 }
-
+.video-title{
+    font-size: 1.3em;
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #ffffff5e;
+}
+.video-description{
+    color:#d1d1d1;
+}
+.published-at{
+    font-size: 0.8em;
+    padding-bottom: 10px;
+    margin-bottom: 0px;
+}
